--- a/general.css
+++ b/general.css
@@ -120,3 +120,10 @@ pre{
     transition: 0.3s;
   }
 }
+
+@media only screen and (min-width: 375px) 
+and (max-width: 812px){ 
+    .letters{
+      grid-template-columns: auto auto auto auto auto auto;
+    }
+}
